--- a/style.css
+++ b/style.css
@@ -1,10 +1,27 @@
+:root {
+    --col1: rgb(0, 100, 250);
+    --col2: rgb(224, 0, 75);
+    --col3: rgb(255, 153, 0);
+}
+
 * {
     margin-left: auto;
     margin-right: auto;
     font-family: Helvetica;
 }
+
+html {
+    /* background-image: linear-gradient(to bottom right, rgb(0, 44, 109), rgb(119, 0, 73), rgb(150, 90, 0)); */
+    background-image: linear-gradient(to bottom right, var(--col1), var(--col2), var(--col3));
+    background-attachment: fixed;
+    /* object-fit: cover;
+    size: 100%; */
+}
+
+
 h1 {
     text-align: center;
+    text-shadow: 0px 0px 50px rgba(255, 255, 255, 64);
 }
 
 h2, p  {
@@ -31,18 +48,26 @@ a:active {
 .grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 20px 20px;
+    /* gap: 20px 20px; */
 }
 
 .card {
+    background-color: rgb(245, 241, 220);
     border: 2px solid black;
     border-radius: 20px;
     max-width: 600px;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin: 5px;
+    margin: 20px;
+    transition: transform 0.3s, box-shadow 0.3s;
     a {
         margin-bottom: 15px;
     }
+}
+
+.card:hover {
+    transform: scale(1.05);
+    cursor: pointer;
+    box-shadow: 5px 10px 10px black;
 }
